objects/Case.object
<CustomObject>
    <fields>
        <fullName>Resolution_Reason_Code__c</fullName>
        <description>This field will hold the list of Resolution Reason Codes.</description>
        <label>Resolution Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Information Requested</fullName>
                </value>
                <value>
                    <fullName>Additional Information Requested Not Received</fullName>
                </value>
                <value>
                    <fullName>Adjustment Completed</fullName>
                </value>
                <value>
                    <fullName>Appealed Adjustment</fullName>
                </value>
                <value>
                    <fullName>Appealed Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Exception</fullName>
                </value>
                <value>
                    <fullName>Billing Discrepancies</fullName>
                </value>
                <value>
                    <fullName>CF Primary/newly identified</fullName>
                </value>
                <value>
                    <fullName>CF Primary/Prev identified</fullName>
                </value>
                <value>
                    <fullName>CF Secondary/newly identified</fullName>
                </value>
                <value>
                    <fullName>CF Secondary/Prev identified</fullName>
                </value>
                <value>
                    <fullName>Claim Paid Correctly</fullName>
                </value>
                <value>
                    <fullName>Claim rejected as a duplicate</fullName>
                </value>
                <value>
                    <fullName>Claim rejected correctly</fullName>
                </value>
                <value>
                    <fullName>Claim rejected in error</fullName>
                </value>
                <value>
                    <fullName>Corrected claim received</fullName>
                </value>
                <value>
                    <fullName>E-mail Response</fullName>
                </value>
                <value>
                    <fullName>Enrollment Discrepancies</fullName>
                </value>
                <value>
                    <fullName>EOB received</fullName>
                </value>
                <value>
                    <fullName>Executive Level Response</fullName>
                </value>
                <value>
                    <fullName>Incorrect modifiers</fullName>
                </value>
                <value>
                    <fullName>Information Not Received</fullName>
                </value>
                <value>
                    <fullName>Information Received</fullName>
                </value>
                <value>
                    <fullName>Letter Sent</fullName>
                </value>
                <value>
                    <fullName>Materials/Documents Sent</fullName>
                </value>
                <value>
                    <fullName>No Authorization of file</fullName>
                </value>
                <value>
                    <fullName>No Authoriztion on file</fullName>
                </value>
                <value>
                    <fullName>Non Par prov req addtn'l money</fullName>
                </value>
                <value>
                    <fullName>No Out-of-Network benefits</fullName>
                </value>
                <value>
                    <fullName>No Record of Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Reason_Posted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Reason Posted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Reason__c</fullName>
        <description>Enter External Notes that is to be viewed by external users</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revision_Numbr_on_NAEG_Sections_impacted__c</fullName>
        <label>Revision # on NAEGS Sections impacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routed_To_Description__c</fullName>
        <description>This will have a short description of the routing code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routed To Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routed_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routed To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Category__c</fullName>
        <label>SLA Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Non-Platinum</fullName>
                </value>
                <value>
                    <fullName>Broker Sales Support</fullName>
                </value>
                <value>
                    <fullName>Broker Compliance</fullName>
                </value>
                <value>
                    <fullName>Broker Escalation</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_NAEGS_Change_Request__c</fullName>
        <label>Status of NAEGS Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Request out to Sales</fullName>
                </value>
                <value>
                    <fullName>Second Request out to Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubscriberContrivedKey__c</fullName>
        <description>This field holds the Subscriber contrive Key that we get back from Facets when creating Member Case. This field will be used for integrating member case to facets. This field will not be made visible in the UI for any Salesforce users</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SubscriberContrivedKey</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_ID__c</fullName>
        <description>Enter Subscriber ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_In_Which_Issue_Logged__c</fullName>
        <label>System In Which Issue Logged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Hours__c</fullName>
        <label>Testing Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Applied_Hours_del__c</fullName>
        <formula>Analysis_Hours__c  +  Deployment_Hours__c  +  Hours_to_Fix__c  +  Other_Associated_Hours__c  +  Testing_Hours__c  +  Training_Communication_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Applied Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Communication_Hours__c</fullName>
        <label>Training &amp; Communication Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_NAEGS__c</fullName>
        <label>Type of NAEGS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business to provide these values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpdateSource__c</fullName>
        <description>This field indicates the source of the last update and is intended to help triggers process differently based on the source of the change.</description>
        <inlineHelpText>This field indicates the source of the last update and is intended to help triggers process differently based on the source of the change.</inlineHelpText>
        <label>UpdateSource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GUI</fullName>
                    <default>true</default>
                    <label>GUI</label>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>BATCH</fullName>
                </value>
                <value>
                    <fullName>TEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgt_Due_Date_for_Completed_NAEG_Modif__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Urgent Due Date-Completed NAEGS Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2_50_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a contact to a 2-50 Account based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>2-50 Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Cases (2-50)</relationshipLabel>
        <relationshipName>Agency_Cases_2_50</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2_50_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a case to a 2-50 Contact based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>2-50 Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agent Cases (2_50)</relationshipLabel>
        <relationshipName>Agent_Cases_2_50</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X51_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a case to a 51+ Partner Account based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>51+Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Cases (51+)</relationshipLabel>
        <relationshipName>Agency_Cases_51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X51_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a case to a 51+ Partner Account based on entity id. this is used in the back end for 360 degree view of case</description>
        <label>51+Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agent Cases (51+)</relationshipLabel>
        <relationshipName>Agent_Cases_51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X51_Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to tie a case to a 51+ Group Account based on facets account Number. this is used in the back end for 360 degree view of case</description>
        <label>51+ Group Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Cases(51+)</relationshipLabel>
        <relationshipName>Group_Case_51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iLog_Number_If_applicable_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>iLog Number (If applicable) Title</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lapse_Time__c</fullName>
        <description>Calculats the Received case hours from now.</description>
        <formula>(NOW() - Received_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Lapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pageURL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_420 , FIND('/services',  $Api.Partner_Server_URL_420  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pageURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzzMarket_Segment__c</fullName>
        <label>zzzMarket Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2-50</fullName>
                    <default>true</default>
                    <label>2-50</label>
                </value>
                <value>
                    <fullName>51-199</fullName>
                </value>
                <value>
                    <fullName>200-999</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AIA_SWAT_Case</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Production ID Card Queue</label>
        <queue>AIA_SWAT</queue>
        <sharedTo>
            <group>AIA_SWAT</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Facets_case_ID__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>Facets_case_ID__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.NEW_DATA</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases_no_facets_id</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Contact_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>New_Group_ID__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Facets_case_ID__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SBU_Group_Case,Case.SBU_Member_Case,Case.SBU_Non_Member_Case,Case.SBU_Broker_Support_Internal</value>
        </filters>
        <filters>
            <field>Facets_case_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <label>All Closed Cases - no facets id</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_OpenCases_no_facets_id</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Contact_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>New_Group_ID__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>Facets_case_ID__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SBU_Group_Case,Case.SBU_Member_Case,Case.SBU_Non_Member_Case,Case.SBU_Broker_Support_Internal</value>
        </filters>
        <filters>
            <field>Facets_case_ID__c</field>
            <operation>equals</operation>
        </filters>
        <label>All OpenCases - no facets id</label>
        <sharedTo>
            <group>SBU_Management</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Pended_Case</fullName>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Facets_case_ID__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Facets_Status__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Facets_Subject__c</columns>
        <columns>Facets_Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facets_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>All Pended Case</label>
        <sharedTo>
            <role>SBU_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broker_Compliance_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Broker Compliance</label>
        <queue>Broker_Compliance</queue>
        <sharedTo>
            <group>SBU_Broker_Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broker_Escalation_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Broker Escalation</label>
        <queue>Broker_Escalation</queue>
        <sharedTo>
            <group>SBU_Broker_Sales_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Broker_Sales_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Broker Sales Support</label>
        <queue>Broker_Sales_Support</queue>
        <sharedTo>
            <group>SBU_Broker_Sales_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Community_Cases_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>X2_50_Account__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Community Cases</label>
        <queue>Community_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Elite_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact_Email_formula__c</columns>
        <columns>Broker_Agency__c</columns>
        <columns>Broker_Agent__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Elite Support</label>
        <queue>Elite_Support</queue>
        <sharedTo>
            <group>SBU_Platinum_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Inquiries_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact_Email_formula__c</columns>
        <columns>Broker_Agency__c</columns>
        <columns>Broker_Agent__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Email Inquiries</label>
        <queue>Email_Inquiries</queue>
        <sharedTo>
            <group>SBU_Platinum_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>X2_50_Account__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Facets_case_ID__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Non_Platinum_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact_Email_formula__c</columns>
        <columns>Broker_Agency__c</columns>
        <columns>Broker_Agent__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Select</label>
        <queue>Non_Platinum_Support</queue>
        <sharedTo>
            <group>SBU_Non_Platinum_Support</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AIA_Account_Issue</fullName>
        <active>true</active>
        <businessProcess>AIA Issue Process</businessProcess>
        <label>AIA Account Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIA_BD_Cases</fullName>
        <active>true</active>
        <businessProcess>AIA Benefit Design Cases</businessProcess>
        <label>AIA Benefit Design Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIA_NCR_Cases</fullName>
        <active>true</active>
        <businessProcess>NCR Support</businessProcess>
        <description>This record type is available for NCR Page Layout and for NCR Cases</description>
        <label>AIA NCR Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>SBU_Broker_Support_Internal</fullName>
        <active>true</active>
        <businessProcess>SBU Broker Support Process</businessProcess>
        <description>This record type will be used to support cases for Small/Medium SBU broker support cases</description>
        <label>SBU Broker Support Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>SBU_Group_Case</fullName>
        <active>true</active>
        <businessProcess>SBU Broker Support Process</businessProcess>
        <description>This record type will be used to support cases for Small/Medium SBU broker support cases for Group Case</description>
        <label>Group Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SBU_Member_Case</fullName>
        <active>true</active>
        <businessProcess>SBU Broker Support Process</businessProcess>
        <description>This record type will be used to support cases for Small/Medium SBU broker support cases for Member case</description>
        <label>Member Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SBU_Non_Member_Case</fullName>
        <active>true</active>
        <businessProcess>SBU Broker Support Process</businessProcess>
        <description>This record type will be used to support cases for Small/Medium SBU broker support cases for Non-member cases</description>
        <label>Non-Member Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Support</fullName>
        <active>true</active>
        <businessProcess>SFDC Support</businessProcess>
        <label>SFDC Support</label>
    </recordTypes>
    <validationRules>
        <fullName>ECSE021</fullName>
        <active>true</active>
        <description>if Implementation is entered, then Issue Category are required</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (RecordType.Name  ='AIA Account Issue'&amp;&amp; IF(   Implementation__c = null &amp;&amp; Implementation__c = '' ,false,IF(ISBLANK(TEXT( Issue_Category__c )),true,false)))</errorConditionFormula>
        <errorDisplayField>Issue_Category__c</errorDisplayField>
        <errorMessage>ECSE021 : If Implementation field is not blank then Issue Category field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECSE022</fullName>
        <active>true</active>
        <description>If Issue Frequency is Global then Account cannot have a value</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (RecordType.Name ='AIA Account Issue' &amp;&amp; IF( ISPICKVAL( Issue_Frequency__c ,'Global'),IF(  AccountId &lt;&gt;  null &amp;&amp;  AccountId &lt;&gt; '' ,true,false),false))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>ECSE022 : If Issue Frequency is "Global" then Account cannot have a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECSE023</fullName>
        <active>true</active>
        <description>if Implementation is entered, then Issue Category are required</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (RecordType.Name  ='AIA Account Issue' &amp;&amp; IF(  Implementation__c = null &amp;&amp; Implementation__c = '' ,false,IF(ISBLANK(TEXT(  Issue_Sub_Category__c  )),true,false)))</errorConditionFormula>
        <errorDisplayField>Issue_Sub_Category__c</errorDisplayField>
        <errorMessage>ECSE023 : If Implementation field is not blank then Issue Sub Category field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECSE024</fullName>
        <active>true</active>
        <description>If Issue Frequency is Account Specific then Account cannot be blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (RecordType.Name ='AIA Account Issue' &amp;&amp; IF( ISPICKVAL( Issue_Frequency__c ,'Account Specific'),IF(  AccountId =  null &amp;&amp;  AccountId = '' ,true,false),false))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>ECS024 : If Issue Frequency =''Account Specific'' then Account cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZZZECSE023_Requirement_Routed_to_Facets</fullName>
        <active>false</active>
        <description>A Case of type "Non-member" will need to have a list of fields populated before it can be Routed To Facets:
Contact, Subject, Description, SLA category, Contact Type, Broker Service Team and Facets Info</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
AND(RecordType.DeveloperName ='SBU_Non_Member_Case' 
, ISPICKVAL(Status , "Routed To Facets"),
OR(
ISBLANK( Subject ), 
ISBLANK( Description ),
ISBLANK(TEXT( Contact_Type__c )),
ISBLANK(TEXT( Broker_Service_Team__c)), 
ISBLANK( TEXT(SLA_Category__c )), 
ISBLANK( TEXT(Facets_Category__c) ), 
ISBLANK( TEXT(Facets_Subject__c )), 
ISBLANK( Contact.LastName )))</errorConditionFormula>
        <errorMessage>ECSE023: Non- Member Case Can not be Routed to Facets without filling the required field. Please review the case for following required fields:
Contact, Contact Type, Subject, Description, SLA category,  Broker Service Team and Facets Info</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZZ_ECSE001_Requirement_Status_In_Progres</fullName>
        <active>false</active>
        <description>Case needs to have a contact , Subject, Description, SLA Category, Broker Service team in-order for the case to be in progress for all Group, Member and</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
(RecordType.DeveloperName ='SBU_Group_Case' || RecordType.DeveloperName ='SBU_Member_Case' ||
RecordType.DeveloperName ='SBU_Non_Member_Case')
&amp;&amp;
ISPICKVAL(Status,"In Progress")
 &amp;&amp;
OR(
    ISBLANK( Subject ),
    ISBLANK( Description ),
    ISBLANK(TEXT( Broker_Service_Team__c)),
    ISBLANK( TEXT(SLA_Category__c )),
    ISBLANK( Contact.LastName ))</errorConditionFormula>
        <errorMessage>ECSE001: This case needs to have a contact, Subject, Description, SLA Category, Broker Service team in-order for the case to be in progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZZ_ECSE002_Reqment_Routed_To_MGMT_DEPT</fullName>
        <active>false</active>
        <description>For a case to be Routed to Management or to Other Departmentby a user it needs to have a Contact tied to it</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; 
RecordType.DeveloperName ='SBU_Group_Case' &amp;&amp;(ISPICKVAL(Status,"Routed to Management")||
ISPICKVAL(Status,"Routed to Other Department")) 
 &amp;&amp;
OR(
    ISBLANK( Subject ),
    ISBLANK( Description ),
    (ISBLANK( Group_Name__c )&amp;&amp; ISBLANK(  New_Group_ID__c)), 
    ISBLANK(TEXT( Broker_Service_Team__c)),
    ISBLANK( TEXT(SLA_Category__c )),  
    ISBLANK( Contact.LastName )
  )</errorConditionFormula>
        <errorMessage>ECSE002: Group case needs to have a contact, Subject, Description, SLA Category, Broker Service team, Market Segment, Group in-order for the case to be Routed to management or Other Deparment</errorMessage>
    </validationRules>
</CustomObject>